<resources>
    <string name="app_name">Firechat</string>
    <string name="auth_root_large_text">Discover your Nearby Friends</string>
    <string name="auth_root_small_text">Find all your nearby friends by signing in quick and easily</string>
    <string name="auth_root_login_button_text">Have an account? Login</string>
    <string name="auth_root_signup_button_text">Join us, it\'s free</string>
    <string name="auth_root_signup_text_large">Signup</string>
    <string name="auth_root_signin_text_large">Get Login</string>
    <string name="auth_root_signup_terms">I have read &amp; agreed with the terms &amp; conditions</string>
    <string name="auth_root_signup_btn_actionsheet">Signup Now</string>
    <string name="auth_root_signin_btn_actionsheet">Get Login</string>
    <string name="auth_root_signup_text_forgot_password">Forgot Password?</string>
    <string name="placeholder_email">Email Address</string>
    <string name="placeholder_password">Enter Password</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_confirm_password">Confirm Password</string>
    <string name="all_chats">All Chats</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="setting_dark_mode">Dark Mode</string>
    <string name="setting_profile_lock">Profile Lock</string>
    <string name="setting_chat_customise">Edit User</string>
    <string name="setting_notification">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_delete_account">Delete Account</string>
    <string name="logout_dialog_title">Logout?</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_yes">Yes</string>
    <string name="logout_dialog_no">No</string>
    <string name="placeholder_search_users">Search Users</string>
    <string name="search_friends">Search Friends</string>
    <string name="search_chats">Search Chats</string>
    <string name="add_friends">Add Friends</string>
    <string name="friends">Friends</string>
    <string name="more">More</string>
    <string name="see_all">See All</string>
    <string name="about_user">About %s</string>
    <string name="photos">Photos</string>
    <string name="add">Add</string>
    <string name="revoke">Revoke</string>
    <string name="remove">Remove</string>
    <string name="send_request_confirmation_header">Send Friend Request?</string>
    <string name="send_request_confirmation_body">Are you sure you want to send a friend request to %s?</string>
    <string name="send_request_confirmation_yes">Yes, send request</string>
    <string name="send_request_confirmation_no">No, do not send friend request</string>
    <string name="revoke_request_confirmation_header">Revoke Friend Request?</string>
    <string name="revoke_request_confirmation_body">Are you sure you want to revoke friend request from %s?</string>
    <string name="revoke_request_confirmation_yes">Yes, revoke request</string>
    <string name="revoke_request_confirmation_no">No, do not revoke request</string>
    <string name="public_posts">Public Posts</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friend_request_count">(%s)</string>
    <string name="zero">0</string>
    <string name="zero_in_brackets">(0)</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="no_about">No About....Navigate to Edit profile to start writing</string>
    <string name="no_occupation">*** No Occupation ***</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="type_message">Type your message</string>
    <string name="moments_ago">moments ago</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="about">About</string>
    <string name="all_friends">All Friends</string>
    <string name="people_count">%d People</string>
    <string name="people_count_one">1 Person</string>
    <string name="create_group">Create Group</string>
    <string name="create_group_confirmation">The selected participants will be notified of the group creation</string>
    <string name="done">Done</string>
    <string name="group_name">Group Name</string>
    <string name="group_subject">Group Subject</string>
    <string name="group_members">Group Members</string>
    <string name="media_files">Media Files</string>
    <string name="add_a_member">Add a member</string>
    <string name="no_subject">*** No Specific Subject ***</string>
    <string name="no_group">No Group Chat</string>
    <string name="no_group_body">You\'re not in any groups yet. You can create one and add your friends.</string>
    <string name="no_friends">No Friends</string>
    <string name="no_friends_body">You don\'t have any friends yet. You can add some.</string>
    <string name="no_friend_requests">No Friend Requests</string>
    <string name="no_friend_requests_body">You don\'t have any friend requests yet. When you get some requests, they will show up here.</string>
    <string name="no_friends_to_search">No Friends to Search</string>
    <string name="no_friends_to_search_body">You don\'t have any friends yet to search.</string>
    <string name="create_new">Create New</string>
    <string name="no_conversations">No Conversations</string>
    <string name="no_conversations_body">You don\'t have any conversations yet, you can start by having conversations with friends</string>
    <string name="chat_people">Chat People</string>
    <string name="unfriend_user">Unfriend User?</string>
    <string name="unfriend">Unfriend</string>
    <string name="unfriend_user_body">Are you sure you want to unfriend %s</string>
    <string name="unfriend_user_confirm_btn">Yes, unfriend</string>
    <string name="unfriend_user_cancel_btn">No, I still want to be friends</string>
    <string name="user_not_found">User Not Found</string>
    <string name="user_not_found_body">Try again by searching by the firstname</string>
    <string name="about_group_chat">About Group Chat</string>
    <string name="admin">Admin</string>
    <string name="edit_group">Edit Group</string>
    <string name="you">You</string>
    <string name="user_actions">User Actions</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="send_message">Send Message</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="block">Block</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="now_admin_second_person">You are now admin</string>
    <string name="now_admin_third_person">%s is now admin</string>
    <string name="not_admin_second_person">You are no longer admin</string>
    <string name="not_admin_third_person">%s is no longer admin</string>
    <string name="group_exit_second_person">You left the group</string>
    <string name="group_exit_third_person">%s left the group</string>
    <string name="group_create_second_person">You created the group at %s</string>
    <string name="group_create_third_person">%1$s created the group at %2$s</string>
    <string name="group_removed">%1$s removed %2$s</string>
    <string name="add_group_members">Add Group Members</string>
    <string name="group_add_second_person">You added %d members</string>
    <string name="group_add_third_person">%1$s added %2$d members</string>
    <string name="group_add_second_person_singular">You added a new member</string>
    <string name="group_add_third_person_singular">%s added a new member</string>
    <string name="about_user_2">About User</string>
    <string name="user_details">User Details</string>
    <string name="name_colon">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="phone_colon">Phone:</string>
    <string name="gender_colon">Gender:</string>
    <string name="location_colon">Location:</string>
    <string name="occupation_colon">Occupation:</string>
    <string name="about_colon">About:</string>
    <string name="none">None</string>
    <string name="network_error">Network Error</string>
    <string name="could_not_connect">Could not connect to the server, retrying connection</string>
    <string name="retrying_connection">Retrying Connection</string>
    <string name="logout">Logout</string>
    <string name="open_camera">Camera</string>
    <string name="select_image">Pick</string>
    <string name="remove_image">Remove</string>
    <string name="expand">Expand</string>
    <string name="gallery">Gallery</string>
    <string name="file">File</string>
    <string name="gif">Gif</string>
    <string name="audio">Audio</string>
    <string name="chat_image">Chat Image</string>
    <string name="from_user">From %s</string>
    <string name="from_you">From You</string>
    <string name="from">From</string>
    <string name="Varsel">Varsel</string>
    <string name="V_A_R_S_E_L">V.A.R.S.E.L</string>
    <string name="profile_image">Profile Image</string>
    <string name="group_image">Group Image</string>
    <string name="load">Load</string>
    <string name="uploading_profile_image">Uploading profile image</string>
    <string name="uploading_group_image">Uploading group image</string>
    <string name="uploading_chat_image">Uploading chat image</string>
    <string name="uploading_public_post">Uploading public post</string>
    <string name="profile_image_upload_successful">Profile image upload successful</string>
    <string name="group_image_upload_successful">Group image upload successful</string>
    <string name="chat_image_upload_successful">Chat image upload successful</string>
    <string name="public_post_upload_successful">Public post upload successful</string>
    <string name="profile_image_upload_error">Something went wrong with profile image upload</string>
    <string name="group_image_upload_error">Something went wrong with group image upload</string>
    <string name="public_post_upload_error">Something went wrong with public post upload</string>
    <string name="chat_image_upload_error">Something went wrong with chat image upload</string>
    <string name="removing_profile_image">Removing profile image</string>
    <string name="removing_group_image">Removing group image</string>
    <string name="removing_public_post">Removing public post</string>
    <string name="remove_profile_image_successful">Remove profile image successful</string>
    <string name="remove_group_image_successful">Remove group image successful</string>
    <string name="remove_public_post_successful">Remove public post successful</string>
    <string name="remove_profile_image_error">Could not remove profile image</string>
    <string name="remove_group_image_error">Could not remove group image</string>
    <string name="remove_public_post_error">Could not remove public post</string>
    <string name="all_posts">All Posts</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="public_post_image">Public Post Image</string>
    <string name="image_with_emoji">"Image 🖼️"</string>
    <string name="cancel">Cancel</string>
    <string name="read_by">Read By</string>
    <string name="delete_message">Delete Message</string>
    <string name="delete_for_all">Delete for all</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="details">Details</string>
</resources>