<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:layout_height="match_parent">

    <View
        style="@style/action_sheet_handlebar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfriend_user"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/revoke_request_body"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfriend_user_body"
        />

    <Button
        android:id="@+id/yes_btn"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unfriend_user_confirm_btn"
        style="@style/auth_root_sign_in_btn"
        android:textSize="13sp"
        />

    <Button
        android:id="@+id/no_btn"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unfriend_user_cancel_btn"
        style="@style/auth_root_sign_up_btn"
        android:textSize="13sp"
        />

</LinearLayout>