<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <View
        style="@style/action_sheet_handlebar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/auth_root_signin_large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSecondary"
            android:layout_marginBottom="15dp"
            android:text="@string/auth_root_signin_text_large" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/auth_root_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email" />

        <EditText
            style="@style/auth_root_edit_text"
            android:maxLength="20"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/placeholder_password" />

        <Button
            android:id="@+id/sign_in_btn_actionsheet"
            android:textColor="@drawable/button_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/auth_root_signin_btn_actionsheet" />

        <LinearLayout
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_root_signup_text_forgot_password" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>