<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="center"
    android:background="@drawable/shape_logout_alert_dialog"
    >

    <FrameLayout
        android:layout_marginRight="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_setting_delete_account"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_warning"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/logout_dialog_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_dialog_message"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/logout_dialog_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/logout_dialog_yes"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>