<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.signedOut.fragments.AuthRootFragment"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/a_s_s_d_f_r_v"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:background="@color/dark_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:gravity="left"
        >
        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/auth_root_large_text"
            android:text="@string/auth_root_large_text"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            style="@style/auth_root_small_text"
            android:text="@string/auth_root_small_text" />

        <Button
            style="@style/auth_root_sign_in_btn"
            android:id="@+id/navigate_to_sign_in"
            android:text="@string/auth_root_login_button_text" />

        <Button
            android:id="@+id/navigate_to_sign_up"
            style="@style/auth_root_sign_up_btn"
            android:text="@string/auth_root_signup_button_text" />

    </LinearLayout>

</FrameLayout>