<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <View
        style="@style/action_sheet_handlebar"
        />

<!--    Header-->
    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Edmund Williams"
            android:textAllCaps="true"
            android:textColor="?chat_subtitle_text_color"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="?chat_title_text_color"
            android:textSize="15dp"
            android:id="@+id/cancel_btn"
            />
    </LinearLayout>

<!--    Body-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            style="@style/horizontal_rule"
            />


<!--        Read By-->
        <LinearLayout
            android:id="@+id/read_by_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                android:src="@drawable/ic_eye"
                style="@style/actionsheet_message_item_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_by"
                android:textAllCaps="true"
                android:textColor="?chat_subtitle_text_color"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/item_text_size"
                />

        </LinearLayout>

<!--        Delete-->
        <LinearLayout
            android:id="@+id/delete_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                style="@style/actionsheet_message_item_icon"
                android:src="@drawable/ic_trash"
                />

            <TextView
                android:text="@string/delete_message"
                style="@style/actionsheet_message_item_text" />

        </LinearLayout>

        <!--        Delete for all-->
        <LinearLayout
            android:id="@+id/delete_for_all_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                style="@style/actionsheet_message_item_icon"
                android:src="@drawable/ic_trash"
                />

            <TextView
                android:text="@string/delete_for_all"
                style="@style/actionsheet_message_item_text" />

        </LinearLayout>

<!--        Reply-->
        <LinearLayout
            android:id="@+id/reply_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                style="@style/actionsheet_message_item_icon"
                android:src="@drawable/ic_chat"
                />

            <TextView
                android:text="@string/reply"
                style="@style/actionsheet_message_item_text" />

        </LinearLayout>

<!--        Forward-->
        <LinearLayout
            android:id="@+id/forward_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                style="@style/actionsheet_message_item_icon"
                android:src="@drawable/ic_arrow_forward"
                />

            <TextView
                android:text="@string/forward"
                style="@style/actionsheet_message_item_text" />

        </LinearLayout>

        <!--        Details-->
        <LinearLayout
            android:id="@+id/details_parent"
            style="@style/actionsheet_message_item_parent">

            <ImageView
                style="@style/actionsheet_message_item_icon"
                android:src="@drawable/ic_notes"
                />

            <TextView
                android:text="@string/details"
                style="@style/actionsheet_message_item_text" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>